    several other build systems by using different "generators" provided
    by CMake (for instance Ninja, CodeBlocks, Eclipse, KDevelop3, Xcode, etc.).
    See README.CMake.txt for more information.

  - autoconf/configure is still supported by the FLTK team for backwards
    compatibility with older systems that lack CMake support.


  New Features and Extensions

  - (add new items here)
  - Added support for MacOS 10.13 "High Sierra".
  - New method Fl_Group::bounds() replaces Fl_Group::sizes() which is now
    deprecated. Fl_Group::bounds() uses the new class Fl_Rect that contains
    widget coordinates and sizes x(), y(), w(), and h() (STR #3385).
    Documentation for bounds() and its internal structure was added.
  - X11 platform: Added support for HiDPI displays and for rescaling any window
    at run-time under user control. Under the gnome desktop, FLTK applications
    detect the current gnome scaling factor and use it to scale all FLTK windows.
    Under other desktops, the FLTK_SCALING_FACTOR environment variable can be
    used to set the starting scaling factor of all FLTK applications.
    In addition, it is possible to rescale all FLTK windows mapped to a screen
    by typing ctrl-'+' (enlarge), ctrl-'-' (shrink) or ctrl-'0' (back to starting
    factor value). Windows moved between screens adjust to the scaling factor of
    their screen. This supports desktops mixing screens with distinct resolutions.
    [HiDPI displays have been supported since FLTK 1.3.3 for the WIN32 and MacOS platforms].
  - New method shadow(int) allows to disable the shadows of the hands
    of Fl_Clock, Fl_Clock_Output, and derived widgets.
  - New method Fl_Tabs::tab_align() allows to set alignment of tab labels,
    particularly to support icons on tab labels (STR #3076).
  - Added '--enable-print' option to configure effective under X11 platforms
    and with 'yes' default value. Using '--enable-print=no' removes print